--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
             <link rel="icon" href="/assets/favicon.ico?v2">
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-            <meta name="description" content="" />
+            <meta name="description" content="Domain Emails" />
             <meta name="author" content="" />
+            <meta name="keywords" content="Email" />
             <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
             <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
             <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
