--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
     <html lang="en">
         <head>
             <meta charset="UTF-8" />
-            <link rel="icon" href="/assets/favicon.ico?v2">
+            <link rel="icon" href="/favicon.ico?v2">
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
             <meta name="description" content="Domain Emails" />
             <meta name="author" content="" />
             <meta name="keywords" content="Email" />
-            <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+            <link rel="icon" type="image/x-icon" href="favicon.ico" />
             <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
             <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
             <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
